Refs #140518 - Fix answer box left align.

--- a/src/SearchBlock/styles.less
+++ b/src/SearchBlock/styles.less
@@ -1285,6 +1285,8 @@ div.ui.modal.facet {
 }
 
 div.answers-section {
+  margin: 0 !important;
+
   div.answers-content {
     padding-left: 40px !important;
 
